# android-ffmepg-videocapture

./: CMakeCache.txt  CMakeLists.txt  README.md  build_debug_opencv4ffmepg.sh
build_android/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCV.mk  OpenCVConfig.cmake  OpenCVModules_arm64_v8a.cmake  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  version_string.tmp
build_android/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_android/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_android/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_android/modules/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_android/unix-install/: opencv.pc
build_android4ffmpeg/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCV.mk  OpenCVConfig.cmake  OpenCVModules_arm64_v8a.cmake  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
build_android4ffmpeg/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_android4ffmpeg/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_android4ffmpeg/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_android_v4l/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCV-arm64-v8a.mk  OpenCV.mk  OpenCVConfig.cmake  OpenCVModules_arm64_v8a.cmake  cmake_install.cmake  cmake_uninstall.cmake
cmake/: OpenCVFindLibsVideo.cmake
samples/: CMakeLists.txt  build_example.sh
(+472 files in other folders)
